Fixed scroll-up arrow visibility in mobile

--- a/css/media.css
+++ b/css/media.css
@@ -614,4 +614,8 @@
 		width: 144px;
 	}
 
+	.scroll-to-top {
+    display: none !important;
+  }
+
 }
